--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -32,3 +32,13 @@ jobs:
       run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Build and push image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: bradleyla/cogent-github-action
+        tags: latest
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{ secret.DOCKER_USERNAME }}
+        password: ${{ secret.DOCKER_PASSWORD }}
